[package]
name = "familyphotos"
authors = ["Filea Răzvan-Gheorghe"]
version = "4.2.0"
edition = "2024"

[dependencies]
# Async/Multithreading
tokio = { version = "1", features = ["rt-multi-thread", "time", "fs", "io-std", "macros", "signal"] }
tokio-util = { version = "0.7", features = ["io"] }
rayon = "1.11"

# Axum
axum = { version = "0.8.1", features = ["multipart"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
axum-login = "0.18"
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "macros", "time", "sqlite", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.14", features = ["base64"] }

# Files
walkdir = "2.5"
mime_guess = "2"
kamadak-exif = "0.6"
tempfile = "3.22"

# Utils
clap = { version = "4.5", features = ["derive", "cargo"] }
thiserror = "2"
regex = "1"
wait-timeout = "0.2"
time = { version = "0.3", features = ["macros", "parsing", "serde"] }
dotenvy = "0.15"
rand = "0.9.2"
argon2 = { version = "=0.6.0-rc.1" }
blake3 = { version = "1.8.2", features = ["mmap"] }
uuid = { version = "1.18", features = ["v4"] }
fast-thumbhash = { git = "https://github.com/razvanfilea/fast-thumbhash" }
mimalloc = "0.1"

[profile.dev.package.sqlx-macros]
opt-level = 3
